--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@giphy/js-fetch-api": "^5.0.0",
     "@quasar/extras": "^1.0.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vue-virtual-scroller": "^2.0.0-beta.8"
   },
   "devDependencies": {
+    "@giphy/js-types": "^4.4.0",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.0.0",
     "@types/node": "^12.20.21",
